Automatically retrieve geotiff crs

--- a/cresi_output_example.ipynb
+++ b/cresi_output_example.ipynb
@@ -60,6 +60,7 @@
     "from pathlib import Path\n",
     "import shapely\n",
     "import json\n",
+    "import gdal\n",
     "print('import complete')"
    ]
   },
@@ -114,72 +115,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import rasterio as rio\n",
-    "from rasterio.warp import calculate_default_transform, reproject, Resampling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reproject_raster(in_path, out_path, desired_crs='EPSG:4326'):\n",
-    "\n",
-    "    \"\"\"\n",
-    "    \"\"\"\n",
-    "    # reproject raster to project crs\n",
-    "    with rio.open(in_path) as src:\n",
-    "        src_crs = src.crs\n",
-    "        transform, width, height = calculate_default_transform(src_crs, desired_crs, src.width, src.height, *src.bounds)\n",
-    "        kwargs = src.meta.copy()\n",
-    "\n",
-    "        kwargs.update({\n",
-    "            'crs': desired_crs,\n",
-    "            'transform': transform,\n",
-    "            'width': width,\n",
-    "            'height': height})\n",
-    "\n",
-    "        with rio.open(out_path, 'w', **kwargs) as dst:\n",
-    "            for i in range(1, src.count + 1):\n",
-    "                reproject(\n",
-    "                    source=rio.band(src, i),\n",
-    "                    destination=rio.band(dst, i),\n",
-    "                    src_transform=src.transform,\n",
-    "                    src_crs=src.crs,\n",
-    "                    dst_transform=transform,\n",
-    "                    dst_crs=desired_crs,\n",
-    "                    resampling=Resampling.nearest)\n",
-    "    return(out_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'/home/solaris/data/cresi/sample_4326.tif'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "source": [
-    "reproject_raster(in_path=str(sample_image_path),out_path=str(Path(cresi_path/'sample_4326.tif')))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reproject_raster_gdal(in_path:str,epsg:str,out_path:str=None):\n",
+    "    in_path = str(in_path)\n",
+    "    if not out_path:\n",
+    "        out_path = in_path[:-4]+epsg+'.tif'\n",
+    "    input_raster = gdal.Open(in_path)\n",
+    "    gdal.Warp(out_path,input_raster,dstSRS=epsg)\n",
+    "    return out_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_path = Path(reproject_raster_gdal(in_path=sample_image_path,epsg='EPSG:4326'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +160,7 @@
     }
    ],
    "source": [
-    "with rasterio.open(sample_transform_path) as r:\n",
+    "with rasterio.open(out_path) as r:\n",
     "    print('Number of Bands: ',r.count,'\\n')\n",
     "    print('Bounds of the Raster File: ',r.bounds,'\\n')\n",
     "    print('Raster File CRS: ',r.crs,'\\n')"
@@ -215,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,39 +254,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(3, 4456, 7292)"
+       "(3, 4078, 7774)"
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 17
     }
    ],
    "source": [
-    "raster = read_raster(sample_image_path)\n",
+    "raster = read_raster(out_path)\n",
     "raster.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(4456, 7292, 3)"
+       "(4078, 7774, 3)"
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 18
     }
    ],
    "source": [
@@ -343,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +382,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ImageId</th>\n      <th>WKT_Pix</th>\n      <th>geometry</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (1352.0 2.0, 1347.0 93.0, 1339.0 14...</td>\n      <td>LINESTRING (1352.000 2.000, 1347.000 93.000, 1...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (2547.0 2.0, 2574.0 89.0, 2586.0 14...</td>\n      <td>LINESTRING (2547.000 2.000, 2574.000 89.000, 2...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (3585.0 2.0, 3612.0 20.0, 3639.0 30...</td>\n      <td>LINESTRING (3585.000 2.000, 3612.000 20.000, 3...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4025.0 2.0, 4037.0 21.0, 4069.0 62...</td>\n      <td>LINESTRING (4025.000 2.000, 4037.000 21.000, 4...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4786.0 2.0, 4831.0 47.0, 4835.0 58.0)</td>\n      <td>LINESTRING (4786.000 2.000, 4831.000 47.000, 4...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 23
     }
    ],
    "source": [
@@ -438,28 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'EPSG:32636'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 22
-    }
-   ],
-   "source": [
-    "gdf.crs = 'EPSG:32636'\n",
-    "gdf.crs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -479,6 +418,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'EPSG:32636'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "gdf.crs = crs\n",
+    "gdf.crs"
+   ]
+  },
+  {
    "source": [
     "### Use original image affine transformation information to convert pixel coordinates geocoordinates"
    ],
@@ -487,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +458,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 26
     }
    ],
    "source": [
@@ -509,9 +469,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "             ImageId                                            WKT_Pix  \\\n",
+       "0  Ortho_Sample_clip  LINESTRING (1352.0 2.0, 1347.0 93.0, 1339.0 14...   \n",
+       "1  Ortho_Sample_clip  LINESTRING (2547.0 2.0, 2574.0 89.0, 2586.0 14...   \n",
+       "2  Ortho_Sample_clip  LINESTRING (3585.0 2.0, 3612.0 20.0, 3639.0 30...   \n",
+       "3  Ortho_Sample_clip  LINESTRING (4025.0 2.0, 4037.0 21.0, 4069.0 62...   \n",
+       "4  Ortho_Sample_clip  LINESTRING (4786.0 2.0, 4831.0 47.0, 4835.0 58.0)   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  LINESTRING (768264.649 3748006.353, 768262.149...  \n",
+       "1  LINESTRING (768862.149 3748006.353, 768875.649...  \n",
+       "2  LINESTRING (769381.149 3748006.353, 769394.649...  \n",
+       "3  LINESTRING (769601.149 3748006.353, 769607.149...  \n",
+       "4  LINESTRING (769981.649 3748006.353, 770004.149...  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ImageId</th>\n      <th>WKT_Pix</th>\n      <th>geometry</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (1352.0 2.0, 1347.0 93.0, 1339.0 14...</td>\n      <td>LINESTRING (768264.649 3748006.353, 768262.149...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (2547.0 2.0, 2574.0 89.0, 2586.0 14...</td>\n      <td>LINESTRING (768862.149 3748006.353, 768875.649...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (3585.0 2.0, 3612.0 20.0, 3639.0 30...</td>\n      <td>LINESTRING (769381.149 3748006.353, 769394.649...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4025.0 2.0, 4037.0 21.0, 4069.0 62...</td>\n      <td>LINESTRING (769601.149 3748006.353, 769607.149...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4786.0 2.0, 4831.0 47.0, 4835.0 58.0)</td>\n      <td>LINESTRING (769981.649 3748006.353, 770004.149...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
    "source": [
     "gdf['geometry'] = gdf['geometry'].affine_transform(matrix)\n",
     "gdf.head()"
@@ -526,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +534,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ImageId</th>\n      <th>WKT_Pix</th>\n      <th>geometry</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (1352.0 2.0, 1347.0 93.0, 1339.0 14...</td>\n      <td>LINESTRING (35.89898 33.83828, 35.89894 33.837...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (2547.0 2.0, 2574.0 89.0, 2586.0 14...</td>\n      <td>LINESTRING (35.90543 33.83813, 35.90556 33.837...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (3585.0 2.0, 3612.0 20.0, 3639.0 30...</td>\n      <td>LINESTRING (35.91103 33.83800, 35.91118 33.837...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4025.0 2.0, 4037.0 21.0, 4069.0 62...</td>\n      <td>LINESTRING (35.91341 33.83794, 35.91347 33.837...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4786.0 2.0, 4831.0 47.0, 4835.0 58.0)</td>\n      <td>LINESTRING (35.91751 33.83784, 35.91775 33.837...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 28
     }
    ],
    "source": [
@@ -560,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +564,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 31
     }
    ],
    "source": [
@@ -589,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +599,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ImageId</th>\n      <th>geometry</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (35.89898 33.83828, 35.89894 33.837...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (35.90543 33.83813, 35.90556 33.837...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (35.91103 33.83800, 35.91118 33.837...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (35.91341 33.83794, 35.91347 33.837...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (35.91751 33.83784, 35.91775 33.837...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 33
     }
    ],
    "source": [
@@ -624,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +637,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 35
     }
    ],
    "source": [
@@ -669,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
