--- a/cresi_output_example.ipynb
+++ b/cresi_output_example.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,16 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_transform_path = Path(cresi_path/'sample_4326.tif')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,16 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raster_bbox = get_bbox(sample_transform_path)"
+    "raster_bbox = get_bbox(out_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +256,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 15
     }
    ],
    "source": [
@@ -275,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +277,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 16
     }
    ],
    "source": [
@@ -303,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +373,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ImageId</th>\n      <th>WKT_Pix</th>\n      <th>geometry</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (1352.0 2.0, 1347.0 93.0, 1339.0 14...</td>\n      <td>LINESTRING (1352.000 2.000, 1347.000 93.000, 1...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (2547.0 2.0, 2574.0 89.0, 2586.0 14...</td>\n      <td>LINESTRING (2547.000 2.000, 2574.000 89.000, 2...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (3585.0 2.0, 3612.0 20.0, 3639.0 30...</td>\n      <td>LINESTRING (3585.000 2.000, 3612.000 20.000, 3...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4025.0 2.0, 4037.0 21.0, 4069.0 62...</td>\n      <td>LINESTRING (4025.000 2.000, 4037.000 21.000, 4...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4786.0 2.0, 4831.0 47.0, 4835.0 58.0)</td>\n      <td>LINESTRING (4786.000 2.000, 4831.000 47.000, 4...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 21
     }
    ],
    "source": [
@@ -398,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -419,18 +410,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'EPSG:32636'"
+       "CRS.from_epsg(32636)"
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 23
     }
    ],
    "source": [
@@ -447,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +449,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 24
     }
    ],
    "source": [
@@ -469,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +484,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ImageId</th>\n      <th>WKT_Pix</th>\n      <th>geometry</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (1352.0 2.0, 1347.0 93.0, 1339.0 14...</td>\n      <td>LINESTRING (768264.649 3748006.353, 768262.149...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (2547.0 2.0, 2574.0 89.0, 2586.0 14...</td>\n      <td>LINESTRING (768862.149 3748006.353, 768875.649...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (3585.0 2.0, 3612.0 20.0, 3639.0 30...</td>\n      <td>LINESTRING (769381.149 3748006.353, 769394.649...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4025.0 2.0, 4037.0 21.0, 4069.0 62...</td>\n      <td>LINESTRING (769601.149 3748006.353, 769607.149...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4786.0 2.0, 4831.0 47.0, 4835.0 58.0)</td>\n      <td>LINESTRING (769981.649 3748006.353, 770004.149...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 25
     }
    ],
    "source": [
@@ -510,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +525,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ImageId</th>\n      <th>WKT_Pix</th>\n      <th>geometry</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (1352.0 2.0, 1347.0 93.0, 1339.0 14...</td>\n      <td>LINESTRING (35.89898 33.83828, 35.89894 33.837...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (2547.0 2.0, 2574.0 89.0, 2586.0 14...</td>\n      <td>LINESTRING (35.90543 33.83813, 35.90556 33.837...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (3585.0 2.0, 3612.0 20.0, 3639.0 30...</td>\n      <td>LINESTRING (35.91103 33.83800, 35.91118 33.837...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4025.0 2.0, 4037.0 21.0, 4069.0 62...</td>\n      <td>LINESTRING (35.91341 33.83794, 35.91347 33.837...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (4786.0 2.0, 4831.0 47.0, 4835.0 58.0)</td>\n      <td>LINESTRING (35.91751 33.83784, 35.91775 33.837...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 26
     }
    ],
    "source": [
@@ -544,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +555,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 29
     }
    ],
    "source": [
@@ -573,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +590,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ImageId</th>\n      <th>geometry</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (35.89898 33.83828, 35.89894 33.837...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (35.90543 33.83813, 35.90556 33.837...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (35.91103 33.83800, 35.91118 33.837...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (35.91341 33.83794, 35.91347 33.837...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Ortho_Sample_clip</td>\n      <td>LINESTRING (35.91751 33.83784, 35.91775 33.837...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 31
     }
    ],
    "source": [
@@ -608,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +628,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 33
     }
    ],
    "source": [
@@ -653,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
